force-app/main/default/objects/Approval_Request__c/fields/Approval_Decision__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decision__c</fullName>
    <label>Approval Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>