force-app/main/default/objects/Approval_Request__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <label>Approval Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Review</fullName>
            </value>
            <value>
                <fullName>Underwriting Review</fullName>
            </value>
            <value>
                <fullName>Quote Pending Final UW Approval</fullName>
            </value>
            <value>
                <fullName>Proposal Revision</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Additional Info Submission</fullName>
            </value>
            <value>
                <fullName>Pricing Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>