force-app/main/default/objects/Approval_Request__c/fields/Approved_Denied_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_Denied_by__c</fullName>
    <label>Approved/Denied by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>