force-app/main/default/objects/Approval_Request__c/fields/Carrier_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Submission_Status__c</fullName>
    <formula>text( Proposal__r.Carrier_Submission_Status__c )</formula>
    <label>Carrier Submission Status</label>
    <type>Text</type>
</CustomField>