force-app/main/default/objects/Approval_Request__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Decision__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>UW_Decline_Reason</valueSetName>
    </valueSet>
</CustomField>