force-app/main/default/objects/Approval_Request__c/fields/Disqualified_On__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_On__c</fullName>
    <label>Disqualified On:</label>
    <type>DateTime</type>
</CustomField>