force-app/main/default/objects/Approval_Request__c/fields/Health_Quote__c.field-meta.xml
<CustomField>
    <fullName>Health_Quote__c</fullName>
    <formula>text(Proposal__r.Health_Quote__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Quote</label>
    <type>Text</type>
</CustomField>