force-app/main/default/objects/Approval_Request__c/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <formula>Proposal__r.Total_of_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>