force-app/main/default/objects/Approval_Request__c/fields/Policy_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Exp_Date__c</fullName>
    <formula>Proposal__r.Current_Policy_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Exp. Date</label>
    <type>Date</type>
</CustomField>