force-app/main/default/objects/Approval_Request__c/fields/Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id__c</fullName>
    <formula>Proposal__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Id</label>
    <type>Text</type>
</CustomField>