force-app/main/default/objects/Approval_Request__c/fields/Proposal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Stage__c</fullName>
    <formula>text( Proposal__r.Stage__c  )</formula>
    <label>Proposal Stage</label>
    <type>Text</type>
</CustomField>