force-app/main/default/objects/Approval_Request__c/fields/Sales_Office_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Stage__c</fullName>
    <formula>text(Proposal__r.SOC_Status__c )</formula>
    <label>Sales Office Stage</label>
    <type>Text</type>
</CustomField>