force-app/main/default/objects/Approval_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending SOC Review</fullName>
            </value>
            <value>
                <fullName>Pending UW Review</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved for UW Review</fullName>
            </value>
            <value>
                <fullName>Approved by SOC</fullName>
            </value>
            <value>
                <fullName>Disqualified by SOC</fullName>
            </value>
            <value>
                <fullName>Approved by Underwriting</fullName>
            </value>
            <value>
                <fullName>UW Additional Requirements Requested</fullName>
            </value>
            <value>
                <fullName>Disqualified by Underwriting</fullName>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>