force-app/main/default/objects/Approval_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>