force-app/main/default/objects/Approval_Request__c/fields/Submitter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Notes__c</fullName>
    <label>Submitter Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>