force-app/main/default/objects/Approval_Request__c/fields/Total_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Wages__c</fullName>
    <formula>Proposal__r.Total_Gross_Wages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>