force-app/main/default/objects/Approval_Request__c/fields/Underwriting_Stage__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Stage__c</fullName>
    <formula>text( Proposal__r.Underwriting_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Underwriting Stage</label>
    <type>Text</type>
</CustomField>