force-app/main/default/objects/Approval_Request__c/validationRules/Other_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Approval_Decision__c, &quot;Denied&quot;),
ISPICKVAL( Decline_Reason__c, &quot;Other&quot;),
ISBLANK(Comments__c ))</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Specify Decline Reason</errorMessage>
</ValidationRule>