force-app/main/default/objects/Approval_Request__c/validationRules/Underwriting_Decline_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Underwriting_Decline_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Approval_Decision__c, &quot;Denied&quot;),
ISBLANK(TEXT(Decline_Reason__c ) ))</errorConditionFormula>
    <errorDisplayField>Decline_Reason__c</errorDisplayField>
    <errorMessage>Decline Reason is required</errorMessage>
</ValidationRule>