force-app/main/default/objects/Approval_Request__c/listViews/My_Items_to_Approve.listView-meta.xml
<ListView>
    <fullName>My_Items_to_Approve</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Submitted_On__c</columns>
    <columns>Comments__c</columns>
    <columns>Proposal__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Items to Approve</label>
</ListView>