force-app/main/default/objects/Approval_Request__c/listViews/Pricing_Manager_Approval_Request.listView-meta.xml
<ListView>
    <fullName>Pricing_Manager_Approval_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Pricing Manager</label>
    <queue>Pricing_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>