force-app/main/default/objects/Approval_Request__c/listViews/SOC_Approval_Request.listView-meta.xml
<ListView>
    <fullName>SOC_Approval_Request</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Approval_Request__c</columns>
    <columns>Proposal__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_On__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Approval_Request__c</field>
        <operation>equals</operation>
        <value>Sales Review,Proposal Revision,Contract</value>
    </filters>
    <filters>
        <field>Approved_Denied_by__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sales Office</label>
    <queue>Sales_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>