force-app/main/default/objects/Approval_Request__c/listViews/Submit_to_Carrier.listView-meta.xml
<ListView>
    <fullName>Submit_to_Carrier</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Underwriting_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Client Accepted</value>
    </filters>
    <label>Submit to Carrier</label>
    <sharedTo>
        <role>CSO</role>
        <role>Sales_Office_Coordinator</role>
        <role>Trion_Executive</role>
    </sharedTo>
</ListView>