force-app/main/default/objects/Approval_Request__c/listViews/Underwriting_Approval_Request.listView-meta.xml
<ListView>
    <fullName>Underwriting_Approval_Request</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Approval_Decision__c</columns>
    <columns>Carrier_Submission_Status__c</columns>
    <columns>Approval_Request__c</columns>
    <columns>Proposal__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_On__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </filters>
    <label>Underwriting</label>
    <queue>Underwriting</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>